# rust-templates

./: README.md  cargo-generate.toml
clap-reqwest-json-blocking/src/: main.rs
templates/: cargo-generate.toml
templates/clap/: Cargo.toml
templates/clap-reqwest-json-blocking/: Cargo.toml
templates/clap/src/: main.rs
templates/cli/: Cargo.toml
templates/cli-http-json/: Cargo.toml
templates/cli-http-json-blocking/: Cargo.toml
templates/cli-http-json/src/: main.rs
templates/workspace/: Cargo.toml  cargo-generate.toml
templates/workspace/{{prefix}}-member/: Cargo.toml
templates/workspace/{{project-name}}-core/: Cargo.toml
templates/workspace/{{project-name}}-{{suffix}}/: Cargo.toml
templates/workspace/{{project-name}}-{{suffix}}/src/: main.rs
